# my-project

./: README.md  build.gradle  settings.gradle
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp
android/app/src/main/java/com/example/edgeviewer/: MainActivity.kt  NativeBridge.kt
android/app/src/main/java/com/example/edgeviewer/gl/: GLFrameRenderer.kt
android/app/src/main/res/layout/: activity_main.xml
web/: index.html  package.json  tsconfig.json
web/src/: index.ts
